# StringAdapter

./: .gitmodules  CMakeLists.txt  README.md
include/: indexed_iterator.h  indexed_iterator.h.backup  string_adapter.h
src/: indexed_iterator.cpp
tests/: CMakeLists.txt  StringAdapter_Tests.cpp  example.cpp
